--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,7 +1,7 @@
 body {
 
     font-family: sans-serif;
-
+    background-color: beige;
 
 }
 
@@ -45,7 +45,14 @@ h2 {
     background-attachment: fixed;
     background-size: cover;
 }
+ @media scren and(min-width:375px)
 
+ {
+     .header
+     {
+     height: 300px;
+     }
+ }
 .text {
     display: flex;
     justify-content: center;
@@ -93,7 +100,7 @@ h2 {
 
     font-size: 1rem;
     text-transform: none;
-    line-height: 40px;
+    line-height: 30px;
     text-align: justify;
 
 
@@ -105,8 +112,7 @@ h2 {
 }
 
 
-h3 {
-    margin-bottom: 50px;
+.resume__title {
     text-align: center;
 
 }
@@ -177,23 +183,9 @@ h1 {
     text-align: center;
     text-transform: uppercase;
     font-family: sans-serif;
-    font-size: 2rem;
+    font-size: 2rem; 
     font-weight: bold;
     padding-top: 50px;
-}
-
-
-.container {
-    width: 500%;
-
-}
-
-
-
-
-.col-md-6 {
-
-    padding-bottom: 100px;
 }
 
 i {
@@ -222,8 +214,9 @@ i {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    height: 350px;
+    height: auto;
     width: 100%;
+    text-align: center;
 
 
 }
@@ -307,24 +300,6 @@ i {
 
     margin-top: 50px;
     margin-bottom: 50px;
-
-
-}
-
-
-.me {
-
-    line-height: 50px;
-    margin-bottom: 80px;
-
-}
-
-body {
-
-    background-color: beige;
-}
-
-.techskills {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -336,22 +311,8 @@ body {
     font-weight: bold;
 }
 
-#house
+.icon__contact
 
-{
-
-    color: #d9ff00;
-    font-size: 2rem;
-}
-
-#envelope
-
-{
-    color: #d9ff00;
-    font-size: 2rem;
-}
-
-#phone
 {
 
     color: #d9ff00;
@@ -361,4 +322,11 @@ body {
 a
 {
     color: white;
+}
+
+.container__about
+
+{
+    padding-left: 30px;
+    padding-right: 30px;
 }
