--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -51,6 +51,7 @@ h2 {
      .header
      {
      height: 300px;
+     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url(../images/background.jpg);
      }
  }
 .text {
