--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -2,12 +2,15 @@
     top: 0;
     position: sticky;
     z-index: 2;
-
 }
 
 .navbar {
     background-color: black;
     font-size: 20px;
+}
 
-
+@media all and (max-width:600px) {
+    .navbar {
+        display: none;
+    }
 }
